Position archive/post screen reader text out of view; use standard labels instead of post names for post navigation (fixes #31); hide the entire breadcrumbs div on mobile instead of just the list

--- a/src/sass/partials/_archives.scss
+++ b/src/sass/partials/_archives.scss
@@ -53,6 +53,11 @@ body.archive {
             color: $white;
         }
         
+        .screen-reader-text {
+            position: absolute;
+            left: -9999px;
+        }
+        
     }
     
 }
